tests/fixtures/invalid/pow_str_str_set.py
# Cannot call pow() with Str, Str, Set[int]
x = pow("hello", "hello", {1, 2, 3})
